simsem, Version 0.0-1.7 10/11/11

- Write all documents of public functions and public classes, including all links within the help files.
- Write comments on some functions about the purposes, arguments, and return values.
- Write comments on all classes about the purposes, constructor, and its arguments.
- Delete visualize method and write plot.cutoff instead.
- Add find.power and plot.power methods.
- Add summary of simModel and simResult
- Update the vignette (the introduction manual), including the example of power analysis, add sections on help files and give us feedback. Update object diagram.

simsem, Version 0.0-1.8 10/12/11

- Add simAnalysis.c into the package
- debug constrain.matrices(list, simConstraint) when constrained LX matrix
- Add vectorize functions
- Add combine.object(freeParamSet, list) where list is the lavaan object
- Change simResult.c to save parameter estimates and SE
- Change find.cutoff, find.power, plot.cutoff, plot.power according to the change in simResult
- Add new function summary.parameters for simResult
- Add documentation for simAnalysis.c and summary.parameters function
- Update the vignette on the summary.parameters function

simsem, Version 0.0-2.0 11/15/11

- Change all public function names and public function arguments to camelCase (private functions still have bad naming)
- Change the names and attributes of all public and private classes.
- Change file names according to the name changes.
*All names changes details are in the simsemNameChangeToV0.0-2.xls
- All documentation are changed according to the name changes.
- Use \itemize and \enumerate appropriate to the context in documentation files
- simResult.f can take list of data frame (Thanks, Patrick)
- Make silent argument in simResult.f to be better (some error messages still appear)
- Update the vigette according to the name changes and comments from Maurico