@@ -28,6 +28,7 @@ simsem, Version 0.0-2.0 11/15/11
 *All names changes details are in the simsemNameChangeToV0.0-2.xls
 - All documentation are changed according to the name changes.
 - Use \itemize and \enumerate appropriate to the context in documentation files
-- simResult.f can take list of data frame (Thanks, Patrick)
+- simResult.f can take list of data frame
 - Make silent argument in simResult.f to be better (some error messages still appear)
-- Update the vigette according to the name changes and comments from Maurico
+- Update the vignette according to the name changes and comments from Maurico
+- Add the function recap section in each example in the vignette.
